--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    
     <div class="header">
       <ul class="left-links">
         <li><a href="#">About</a></li>
@@ -18,15 +19,17 @@
         <li><a href="#">Settings</a></li>
       </ul>
     </div>
+    <div class="container">
     <div class="content">
       <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
       <div class="input">
         <input type="text">
       </div>
       <div class="buttons">
-        <button>Do the thing!</button>
-        <button>Do the other thing!</button>
+        <button class="button-info" >Do the thing!</button>
+        <button class="button-info" >Do the other thing!</button>
       </div>
+    </div>
     </div>
     <div class="footer">
       <ul class="left-links">
@@ -38,5 +41,6 @@
         <li><a href="#">Terms</a></li>
       </ul>
     </div>
+    
   </body>
 </html>
